# CakeCraft-WebConsole

./: .gitignore  .gitmodules  README.md  main_temp.cpp
Server/: CMakeLists.txt  README.md  main_temp.cpp
client/: backup.html  console.html  index.html
client/css/: app.css  foundation.css
client/js/: app.js  backup.js  console.js
server/: run.sh  setup.sh  temp_console-history.json
server/app/: routes.py
server/c-plus-plus/: CMakeLists.txt
server/cpp/: CMakeLists.txt  api.cpp  api.h  wrap.cpp
server/flask/: cml.txt  config.py  main.py  temp_console_history.json
server/flask/API/: __init__.py  api.py
server/flask/app/: __init__.py  config.py  log.py  routes.py
